crates/keron-lang/tests/corpus/errors/parse/val_named_for.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `for` is a reserved keyword
  --> 1:5
  |
1 | val for: Int = 1
  |     ^
